<resources>
    <string name="app_name">Github User</string>
    <string name="avatar_sample">Sample Avatar</string>
    <string name="github_name">Github Name</string>
    <string name="github_username">Github Username</string>
    <string name="search_hint">Search User</string>
    <string name="avatars_sample">Sample Avatar</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="title_detail">Detail User</string>
    <string name="github_logo">Github Logo</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="title_favorite">Favorite User</string>
</resources>