<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/avatars_sample"
        app:layout_constraintBottom_toTopOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextStyle.a1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
        tools:text="@string/github_name" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextStyle.a2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="@string/github_username" />

    <TextView
        android:id="@+id/tv_followers"
        style="@style/TextStyle.a3"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        app:layout_constraintBottom_toTopOf="@id/tv_following_label"
        app:layout_constraintStart_toEndOf="@id/tv_following"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Following" />

    <TextView
        android:id="@+id/tv_following"
        style="@style/TextStyle.a3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tv_followers_label"
        app:layout_constraintEnd_toStartOf="@id/tv_followers"
        app:layout_constraintStart_toStartOf="@id/tv_followers_label"
        app:layout_constraintTop_toTopOf="@id/tv_followers"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Followers" />

    <TextView
        android:id="@+id/tv_followers_label"
        style="@style/TextStyle.a4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/tv_followers"
        app:layout_constraintStart_toStartOf="@id/tv_followers"
        app:layout_constraintTop_toBottomOf="@id/tv_followers" />

    <TextView
        android:id="@+id/tv_following_label"
        style="@style/TextStyle.a4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/following"
        app:layout_constraintEnd_toEndOf="@id/tv_following"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_following"
        app:layout_constraintTop_toBottomOf="@id/tv_following" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@id/view_pager"
        app:layout_constraintTop_toBottomOf="@id/tv_following_label"
        app:tabIndicatorColor="@color/green"
        app:tabSelectedTextColor="@color/green" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />



    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.600"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="206dp" />

</androidx.constraintlayout.widget.ConstraintLayout>